# mcp-client-chat

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  mcp.json  pyproject.toml
.streamlit/: config.toml
src/mcp_client_chat/: app.py
src/mcp_client_chat/agents/: chat_agent.py
