[project]
name = "mcp-client-chat"
version = "0.1.0"
description = "A multi-modal AI chat client with MCP (Model Context Protocol) tool integration."
readme = "README.md"
authors = [
    { name = "valiantlynx", email = "gormerykombo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "loguru>=0.7.3",
    "machine-core",
    "streamlit>=1.40.0",
]

[tool.uv.sources]
machine-core = { git = "git+https://github.com/samletnorge/machine-core.git" }

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
